--- a/package.json
+++ b/package.json
@@ -8,8 +8,13 @@
     "start": "node src/index.js",
     "start:dev": "ts-node-dev src/index.ts",
     "test": "jest --config ./jest.config.js",
-    "lint": "eslint --fix --ext .js",
-    "prettier:format": "prettier --ignore-path .gitignore \"src/**/*.+(js|jsx|json|ts|tsx)\"",
+    "test:module1": "jest --findRelatedTests tests/module_1/*.test.ts",
+    "test:module2": "jest --findRelatedTests tests/module_2/*.test.ts",
+    "test:module3": "jest --findRelatedTests tests/module_3/*.test.ts",
+    "test:module4": "jest --findRelatedTests tests/module_4/*.test.ts",
+    "test:module5": "jest --findRelatedTests tests/module_5/*.test.ts",
+    "lint": "eslint --fix --ext *.ts",
+    "prettier:format": "prettier  \"src/**/*.+(js|jsx|json|ts|tsx)\"",
     "format": "  npm run prettier:format --write",
     "pre-commit": "lint-staged",
     "prepare": "husky install"
@@ -21,6 +26,7 @@
     "@commitlint/cli": "^15.0.0",
     "@commitlint/config-conventional": "^15.0.0",
     "@types/jest": "^27.4.0",
+    "@types/supertest": "^2.0.11",
     "babel-jest": "^27.4.2",
     "commitlint": "^15.0.0",
     "eslint": "^7.9.0",
@@ -32,13 +38,17 @@
     "jest": "^27.4.3",
     "lint-staged": "^12.1.2",
     "prettier": "^2.5.0",
+    "supertest": "^6.2.2",
     "ts-jest": "^27.1.3",
     "typescript": "^4.5.5"
   },
   "dependencies": {
     "@types/express": "^4.17.13",
+    "dotenv": "^16.0.0",
+    "envalid": "^7.2.2",
     "eslint-plugin-jest": "^25.3.0",
     "express": "^4.17.2",
+    "mongoose": "^6.2.0",
     "ts-node-dev": "^1.1.8"
   },
   "lint-staged": {
