feat: add scripts

--- a/package.json
+++ b/package.json
@@ -8,6 +8,11 @@
     "start": "node src/index.js",
     "start:dev": "ts-node-dev src/index.ts",
     "test": "jest --config ./jest.config.js",
+    "test:module1": "jest --findRelatedTests tests/module_1/*.test.ts",
+    "test:module2": "jest --findRelatedTests tests/module_2/*.test.ts",
+    "test:module3": "jest --findRelatedTests tests/module_3/*.test.ts",
+    "test:module4": "jest --findRelatedTests tests/module_4/*.test.ts",
+    "test:module5": "jest --findRelatedTests tests/module_5/*.test.ts",
     "lint": "eslint --fix --ext .js",
     "prettier:format": "prettier --ignore-path .gitignore \"src/**/*.+(js|jsx|json|ts|tsx)\"",
     "format": "  npm run prettier:format --write",
