--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "envalid": "^7.2.2",
     "eslint-plugin-jest": "^25.3.0",
     "express": "^4.17.2",
+    "mongoose": "^6.2.1",
     "ts-node-dev": "^1.1.8"
   },
   "lint-staged": {
