build: change directory deploy dist

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "commonjs",
   "scripts": {
     "build": "tsc",
-    "start": "node src/index.js",
+    "start": "node ./dist/src/index.js",
     "start:dev": "ts-node-dev src/index.ts",
     "test": "jest --config ./jest.config.js",
     "test:module1": "jest --findRelatedTests tests/module_1/*.test.ts",
